# pdf-extract

./: pyproject.toml  requirements.txt
app/: __init__.py  gunicorn.conf.py  server.py  tasks.py
app/api/: __init__.py  deps.py
app/api/routes/: layout.py  schema.py
app/common/: __init__.py  utils.py
app/config/: conf.py  layout_detection.yaml  ocr.yaml  table_parsing.yaml
app/core/engine/: __init__.py  celery_task.py
app/core/layout/models/: yolo.py
app/core/ocr/models/: latex_ocr.py  table_ocr.py  text_ocr.py
app/tasks/: __init__.py  base_task.py  layout_task.py  ocr_task.py
app/test/: __init__.py  test.py
